<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dip"> 

    <TextView 
    	android:id="@+id/textview_dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/empty"
    />
    
    <CheckBox 
    	android:id="@+id/checkbox_keep_data"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/textview_dialog_cancel"
    	android:text="@string/checkbox_keep_data_unfinished"
		android:checked="false"  
    />
    
    <CheckBox 
    	android:id="@+id/checkbox_delete_data"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/checkbox_keep_data"
    	android:text="@string/checkbox_delete_data"
		android:checked="true"    
    />

</RelativeLayout>