<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:label="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/black"
    tools:context="de.tum.lmt.texturerecognizer.TextureRecognizerActivity" >
    
    <ImageView 
        android:id="@+id/image_logo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image_description_logo"
        android:background="@null" 
        android:src="@mipmap/screen0cut"
    />
    
    <TextView
        android:id="@+id/textview_instructions_start"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
		android:textSize="24dp"
		android:layout_below ="@id/image_logo"
        android:text="@string/textview_instructions_start"
    />
    
    <ImageButton 
        android:id="@+id/button_start"
        android:layout_marginTop="20dp"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textview_instructions_start"
        android:background="@android:color/transparent"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:src="@drawable/start"
        
    />
    
    <Button 
    	android:id="@+id/button_new_texture"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textview_instructions_start"
        android:text="@string/button_new_texture"
        android:visibility="gone"
    />
    
    <Button 
    	android:id="@+id/button_add_to_entry"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/button_new_texture"
        android:text="@string/button_add_to_entry"
        android:visibility="gone"
    />
    
    <TextView
        android:id="@+id/textview_error"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/button_add_to_entry"
        android:text=""
    />
    
    <ImageButton 
    	android:id="@+id/button_prefs"
    	android:layout_height="60dp"
    	android:layout_width="60dp"
    	android:layout_centerHorizontal="true"
    	android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:src="@drawable/settings"
    />
    
</RelativeLayout>
