<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/loggingLayout" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/black"
	 >
    
    <ImageView 
        android:id="@+id/image_bar3"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="TODO"
        android:src="@mipmap/screen3cut"
    />
    
    
    <TextView 
    	android:id="@+id/textview_instructions_logging_1"
    	android:layout_height="wrap_content"
    	android:layout_width="wrap_content"
    	android:layout_alignParentLeft="true"
    	android:layout_alignParentStart="true"
    	android:layout_below="@id/image_bar3"
        android:layout_marginTop="50dp"
    	android:text="@string/textview_instructions_logging_1"    
    />
    
    <CheckBox 
        android:id="@+id/checkbox_sensors_logging"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textview_instructions_logging_1"
        android:text="@string/checkbox_sensors_logging"
        android:checked="true"
        android:enabled="false"
    />
    
    <CheckBox 
        android:id="@+id/checkbox_audio_logging"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/checkbox_sensors_logging"
        android:text="@string/checkbox_audio_logging"
        android:checked="true"
        android:enabled="false"
    />
     <LinearLayout
         android:id="@+id/button_start_loggingLinLay"
    	android:orientation="horizontal"
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/checkbox_audio_logging"
         android:layout_centerHorizontal="true"
    	
    	android:gravity="end">   
    <ImageButton 
    	android:id="@+id/button_start_logging"
		    android:layout_width="60dp"
		    android:layout_height="60dp"
		android:background="@android:color/transparent"    	 
	    android:scaleType="fitXY"
	    android:layout_margin="5dp"
	    android:src="@drawable/camera"      />
    
    <ImageButton 
    	android:id="@+id/button_stop_logging"
		    android:layout_width="60dp"
		    android:layout_height="60dp"
    	android:enabled="false" 
		    android:background="@android:color/transparent"
		    android:cropToPadding="false"
		    android:scaleType="fitXY"
		    android:layout_margin="5dp"
		    android:src="@drawable/cancel" 
    />
    </LinearLayout>
    
    <TextView
    	android:id="@+id/textview_instructions_logging_2"
    	android:layout_height="wrap_content"
    	android:layout_width="wrap_content"
    	android:layout_alignParentLeft="true"
    	android:layout_alignParentStart="true" 
    	android:layout_below="@id/button_start_loggingLinLay"
    	android:text="@string/textview_instructions_logging_2"
    />
    
    <TextView
    	android:id="@+id/textview_instructions_logging_3"
    	android:layout_height="wrap_content"
    	android:layout_width="wrap_content"
    	android:layout_alignParentLeft="true"
    	android:layout_alignParentStart="true" 
    	android:layout_below="@id/textview_instructions_logging_2"
    	android:text="@string/empty"
    />
    
    <LinearLayout
    	android:orientation="horizontal"
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_centerHorizontal="true"
    	
	    android:layout_below="@id/textview_instructions_logging_3"
	    >
    	
    	<ImageButton 
	      	android:id="@+id/button_features_logging"
		    android:layout_width="60dp"
		    android:layout_height="60dp"
		    android:background="@android:color/transparent"
		    android:cropToPadding="false"
		    android:enabled="false"
		    android:clickable="false"
		    android:scaleType="fitXY"
	    android:layout_margin="10dp"
		    android:src="@drawable/start" 
    	/>
    
   		<ImageButton
   		    android:id="@+id/button_cancel_logging"
		    android:layout_width="60dp"
		    android:layout_height="60dp"
		    android:background="@android:color/transparent"
		    android:cropToPadding="false"
		    android:scaleType="fitXY"
		    android:layout_margin="10dp"
		    android:src="@drawable/cancel" 
		    
      		android:enabled="true"
   		/>
        
    </LinearLayout>

</RelativeLayout>
